--- a/site-files/index.css
+++ b/site-files/index.css
@@ -46,7 +46,7 @@ section>div {
     position: relative;
     width: 100%;
 }
-div.section1 {
+div.section1, .section3 {
     text-align: center;
     background-color: #eee;
     padding-top: 82px;
@@ -101,6 +101,65 @@ div.section2 {
     margin-bottom: 74px;
 }
 h2 {
-    font-size: 66px;
+    font-size: 50px;
     font-family: Arial;
+}
+.tabs {
+    margin-bottom: 30px;
+}
+.tab {
+    position: relative;
+    display: inline-block;
+    margin: 0 35px;
+    cursor: pointer;
+}
+.section2 h3 {
+    margin-bottom: 35px;
+}
+
+p {
+    color: #565656;
+    font-size: 24px;
+}
+.section2 p {
+    letter-spacing: -1px;
+}
+.section2[current-tab="1"] [target-content="1"] p, .section2[current-tab="2"] [target-content="2"] p, .section2[current-tab="3"] [target-content="3"] p {
+    color: #007765;
+}
+.footer {
+    background-color: #3d3d3d;
+    height: 200px;
+    padding: 53px 0;
+}
+.social-icons {
+    text-align: center;
+}
+.icon-wrapper {
+    width: 48px;
+    height: 48px;
+    background-color: #fff;
+    display: inline-block;
+    border-radius: 50%;
+    line-height: 48px;
+    margin: 0 20px;
+}
+.footer-icon {
+    width: 48px;
+    height: 48px;
+    border-radius: 50%;
+}
+.footer-text {
+    text-align: center;
+    line-height: 22px;
+    margin: 30px auto 0;
+    font-size: 16px;
+    color: #fff;
+    width: 45%;
+    letter-spacing: 1.1px;
+}
+.copywrite {
+    font-size: 9px;
+    line-height: 12px;
+    margin: 55px auto 0;
 }
