--- a/site-files/index.css
+++ b/site-files/index.css
@@ -42,6 +42,50 @@ div.video-wrapper {
 .bg-video {
     min-width: 100%;
 }
+.title {
+    position: absolute;
+    top: 55%;
+    left: 50%;
+    text-align: center;
+    transform: translate(-50%, -50%);
+}
+.title h1 {
+    font-size: 80px;
+    letter-spacing: -0.2px;
+    white-space: nowrap;
+    font-weight: 500;
+    color: #fff;
+}
+.title .sub {
+    color: #fff;
+    letter-spacing: -0.5px;
+}
+.logo-wrapper {
+    position: absolute;
+    top: 25px;
+    left: 120px;
+    margin: 0;
+    z-index: 3;
+}
+#logo {
+    max-height: 50px;
+    display: block;
+}
+.navbar-links {
+    text-align: right;
+    padding-right: 100px;
+    margin: 35px auto;
+
+}
+.navbar-link {
+    color: #fff;
+    text-decoration: none;
+    line-height: 48px;
+}
+.divider {
+    color: #fff;
+    margin: 0 10px;
+}
 section>div {
     position: relative;
     width: 100%;
@@ -86,11 +130,7 @@ h4 {
     white-space: pre;
     margin-bottom: 0;
 }
-p {
-    font-size: 24px;
-    letter-spacing: -0.3px;
-    color: #565656;
-}
+
 div.section2 {
     text-align: center;
     padding-top: 76px;
